<resources>
    <string name="app_name">Android Contact</string>
    <string name="contacts">Contacts</string>
    <string name="contact_name">Akshay Kumar</string>
    <string name="contact_number">+91-8320458325</string>
    <string name="profile_name">Akshay Kumar</string>
    <string name="profile_first_name">First Name</string>
    <string name="mobile_number">8423273952</string>
    <string name="tv_no">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="name">Akshay</string>
    <string name="name_last">Kumar</string>
    <string name="email">Email</string>
    <string name="dummy_email">aman.kumar@gmail.com</string>
</resources>
